05-Metal&Traefik/07-Havadurumu/02-Havadurumu-Stack-Ingress.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: havadurum
spec:
  selector:
    matchLabels:
      app: havadurum
  replicas: 2
  template:
    metadata:
      labels:
        app: havadurum
    spec:
      containers:
      - name: havadrm-konteyneri
        image: techakademi/havadrm:1
---
apiVersion: v1
kind: Service
metadata:
  name: havadurum-servisi
  labels:
    app: havadurum
spec:
  type: LoadBalancer
  selector:
    app: havadurum
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: havadurum-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: hava.techakademi.com
    http:
      paths:
      - backend:
          service:
            name: havadurum-servisi
            port:
              number: 80
        path: /
        pathType: Prefix
